added code for next/previous button, API dependencies, carousel button view

--- a/src/app/carousal-module/carousal-module.component.html
+++ b/src/app/carousal-module/carousal-module.component.html
@@ -13,7 +13,7 @@
 
 
 <div class="alignCenter">
-	<button class="btn btn-primary">Prev</button>
-	<button class="btn btn-primary">Next</button>
+	<button class="btn btn-primary" (click)="changeImage('prev')">Prev</button>
+	<button class="btn btn-primary" (click)="changeImage('next')">Next</button>
 </div>
 </div>
